# td2d

./: Cargo.toml
src/: main.rs
src/game/: mod.rs  plugin_camera.rs  plugin_player.rs
src/game/brain/: mod.rs  move_to_destination.rs  thirst.rs  wander.rs
src/game/little_brain/: actions.rs  mod.rs  scorers.rs
src/game/map/: mod.rs
src/game/npc/: mod.rs
