[package]
name = "td2d"
version = "0.1.0"
edition = "2021"



[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


#features = ["dynamic_linking"]
[dependencies]
bevy = { version = "0.11.*", features = ["dynamic_linking"] }
bevy_ecs_ldtk = "0.8.0"
bevy_editor_pls = { version = "0.5" }
bevy_spine = "0.6.0"
bevy_xpbd_2d = { version = "0.2", features = ["debug-plugin"] } 
big-brain = "0.17.0"
leafwing-input-manager = "0.10"
seldom_state = "0.7.0"
serde = "1.0.193"
serde_json = "1.0.108"


# watchexec -r cargo  run

